external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_bool_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/invalid_bool_incomplete.move:8:16
  │
8 │         match (b) {
  │                ^ Pattern 'false' not covered
